# llm-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/llm_cli/: __init__.py  _cli.py
